# b2program

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  _config.yml  build.gradle  build_cpp.sh  constraint_solver.adoc  evaluator.pl  package-lock.json  package.json  settings.gradle  tsconfig.json
benchmarks/: MEDIANS.md  MEDIANS_old.md  README.md  average_benchmark_results.py
benchmarks/C++_Primitives/: BBoolean.cpp  BInteger.cpp  BRelation.cpp  BSet.cpp  BString.cpp  BTuple.cpp  CAN_BUS_tlc.cpp  CAN_BUS_tlc_exec.cpp  Cruise_finite1_deterministic.cpp  Cruise_finite1_deterministic.hpp  Cruise_finite1_deterministic_exec.cpp  DataValidationTest.cpp  InsertionSortWhile.cpp  Lift.cpp  LiftExec.cpp  Makefile  Sieve.cpp  TrafficLight.cpp  TrafficLight.hpp  TrafficLightExec.cpp  Train_1_beebook_deterministic.cpp  Train_1_beebook_deterministic_exec.cpp  scheduler_deterministic.cpp  scheduler_deterministic.hpp  scheduler_deterministic_exec.cpp  sort_m2_data1000.cpp  sort_m2_data1000_exec.cpp
benchmarks/Java_Clojure_Set_Big_Integer/: CAN_BUS_tlc.java  CAN_BUS_tlc_exec.java  Cruise_finite1_deterministic.java  Cruise_finite1_deterministic_exec.java  DataValidationTest.java  InsertionSortWhile.java  Lift.java  LiftExec.java  Makefile  Sieve.java  TrafficLightExec.java  Train_1_beebook_deterministic.java  scheduler_deterministic_exec.java  sort_m2_data1000.java
benchmarks/Java_Clojure_Set_Primitives/: Cruise_finite1_deterministic.java  DataValidationTest.java  InsertionSortWhile.java  LiftExec.java  Makefile  Sieve.java  Train_1_beebook_deterministic.java  scheduler_deterministic.java  scheduler_deterministic_exec.java  sort_m2_data1000.java  sort_m2_data1000_exec.java
benchmarks/ProB/: CAN_BUS_tlc.mch  Counter10000.mch  Cruise_finite1_deterministic_exec.mch  DataValidationTest.mch  InsertionSortWhile.mch  Makefile  TrafficLightExec.mch  Train_1_beebook_deterministic.mch  Train_1_beebook_deterministic_exec.mch  scheduler_deterministic_exec.mch  sort_m2_data1000.mch  sort_m2_data1000_asserts.mch  sort_m2_data1000_asserts_exec.mch
benchmarks/Python_Primitives/: CAN_BUS_tlc_exec.py  Cruise_finite1_deterministic.py  Cruise_finite1_deterministic_exec.py  LiftExec.py  Makefile  Sieve.py  TrafficLightExec.py  Train_1_beebook_deterministic.py  Train_1_beebook_deterministic_exec.py  scheduler_deterministic.py  scheduler_deterministic_exec.py  sort_m2_data1000.py  sort_m2_data1000_exec.py
benchmarks/Rust_Big_Integer/: CAN_BUS_tlc.rs  CAN_BUS_tlc_exec.rs  Makefile  scheduler_deterministic.rs
benchmarks/Rust_Primitives/: CAN_BUS_tlc_exec.rs  LiftExec.rs  Makefile  TrafficLightExec.rs  Train_1_beebook_deterministic.rs  sort_m2_data1000.rs  (+5 more)
btypes/: build.gradle
btypes_big_integer/: build.gradle  settings.gradle
btypes_primitives/: build.gradle  settings.gradle
btypes_primitives/src/main/rust/bmachine/: Cargo.toml
btypes_primitives/src/main/rust/bmachine/src/: main.rs
btypes_primitives/src/main/rust_embedded/bmachine/: Cargo.toml
btypes_primitives/src/main/rust_embedded/bmachine_bitvec/: Cargo.toml
btypes_primitives/src/main/rust_embedded/bmachine_bitvec_mc/: Cargo.toml
btypes_primitives/src/main/rust_embedded/bmachine_mc/: Cargo.toml
experiments/: ArithmeticLaws.mch  B2Program_REPL.mch  BoolLaws.mch  DSP0_complicated_initialisation.mch  DataValidationTest.mch  DataValidationTestSmallStep.mch  ERnice_nodata_V53.mch  Generated100.mch  Generated1000.mch  Generated100_v2.mch  LargeRelationSetTests.mch  LargeRelationSetTests_v2.mch  Library_3_3.mch  Makefile  blocksworld_medium.mch  nota.mch  nota_v2.mch  phonebook7_err_enum.mch  phonebook7_ok_enum.mch  prob_oneway8seq_tlc.mch
(+4316 files in other folders)
