[package]
name = "bmachine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
im = "15.0.0"
threadpool = "1.8.1"
derivative = "2.2.0"
dashmap = "~5.1.0"
btypes = { path = "../btypes" }

[profile.release]
opt-level = 3
lto = 'thin'

[profile.dev]
opt-level = 0
