[package]
name = "bmachine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bmachine"
test = false
bench = false

[dependencies]
btypes = { path = "../btypes" }

[profile.release]
opt-level = 3
lto = 'thin'
panic = "abort"

[profile.dev]
opt-level = 0
panic = "abort"

[profile.test]
panic = "abort"