[package]
name = "bmachine_mc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btypes = { path = "../btypes" }
threadpool = "1.8.1"
dashmap = "~5.1.0"
derivative = "2.2.0"

[profile.release]
panic = "abort"
lto = 'thin'

[profile.dev]
opt-level = 0
panic = "abort"

[profile.test]
panic = "abort"